--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,7 @@
 </head>
 <body>
   <ul>
-    <% flash.each do |name,msg|%>
-      <li><%= msg %></li>
-    <% end %>
+    <%= render 'layouts/messages' %>
  </ul>
 <%= yield %>
 
