--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<h>Blog With Mojo Home</h>
+<h>Home of the blog with mojo!</h>
 <br/>
-<h><%= link_to "About", about_path %></h>
+<h><%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %></h>
