--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,7 +13,7 @@
  </p>
  <p>
      <%= f.label :description %><br/>
-     <%= f.text_field :description %><br/>
+     <%= f.text_area :description %><br/>
  </p><br/>
  <%= f.submit %>
 <%end%>
