--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h>Home of the blog with mojo!</h>
-<br/>
-<h><%= link_to "Alpha Blog", articles_path %> | <%= link_to "About", about_path %></h>
+<div class= "center jumbotron">
+    <h1>ALPHA BLOG</h1>
+    <%= link_to "Sign up now", "#",class: "btn btn-primary btn-lg btn-xlarge" %>
+</div>
+
