--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 
 
 
- <h2 align="center">   Title <%= @article.title %></h2>
+ <h2 align="center">Title:&nbsp <%= @article.title %></h2>
 
 
 <div class="well col-xs-8 col-xs-offset-2">
