changed background image

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,7 +22,7 @@ $navbar-default-bg: #f2ecd5;
 
 
 .jumbotron {
-    background-image: asset-url('croc.jpg');
+    background-image: asset-url('alpha.jpg');
     background-size: cover;
     height: 550px;
 
