update migrations and models to refer use to article and add user and metadata to articles list page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,9 +41,16 @@ $navbar-default-bg: #f2ecd5;
     background-color:black;
 }
 
+.article-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+}
+
+
+
 .article-actions {
     border-top: 1px solid #eaeaea;
-    padding-top:5px;
+    padding-top:15px;
 }
 
 .description {
