--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,11 @@ $navbar-default-bg: #f2ecd5;
     font-weight:bold;
 }
 
+.listing {
+    list-style: none;
+    padding-left:0;
+}
+
 .btn-xlarge {
     font-size:1.7em;
     background-color:black;
