--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
 <h1 align="center">Welcome to <%= @user.username%>'s page</h1>
 <%=render 'blurb' %>
 <%=render 'articles/article',obj:@user.articles %>
+<div class ="center">
+    <%= will_paginate @user_articles %>
+</div>
