--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -40,9 +40,12 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <% if logged_in? %>
+            <li><%= link_to 'log out', logout_path, method: :delete %></li>
+            <%else%>
+            <li><%= link_to 'log in', login_path %></li>
+            <li><%= link_to 'sign up', signup_path%></li>
+            <%end%>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
